# usb_cam

./: .gitignore  .gitmodules  .rosinstall  .travis.yml  AUTHORS.md  CHANGELOG.rst  CLONE_SETUP.sh  CMakeLists.txt  IMAGE_TRANSPORT_OPTIMIZATION.md  MEMORY_OPTIMIZATION.md  MULTI_CAMERA_GUIDE.md  Makefile  README.md  UPDATE_PROJECT.sh  cmake_install.cmake  mainpage.dox  manifest.xml  mkdocs.yml  nodelet_plugins.xml  package.xml  stack.xml  versions.json
.github/: CODEOWNERS  labeler.yml
ar_sofiehdfformat_bridge/: README.md  mainpage.dox  manifest.xml
config/: camera_info.yaml  fisheye0.yaml  fisheye1.yaml  fisheye2.yaml  fisheye3.yaml  front0.yaml  left_usb_cam.yml  params.yaml  params_1.yaml  params_2.yaml  right_usb_cam.yml  rondor_camera_info.yaml  rondor_webcam.yaml  rosa_camera_info.yaml  rosa_webcam.yaml  surround0.yaml  surround1.yaml  surround2.yaml  surround3.yaml  surround4.yaml  surround5.yaml  usb_cam.yml
docs/: .pages  doxygen.config
include/: Camera.h  CaptureDevice.h  CaptureFactory.h  Container3d.h  DirectoryIterator.h  Draw.h  EC.h  FileFormat.h  IntegralImage.h  Marker.h  MultiMarkerBundle.h  Optimization.h  Platform.h  Plugin_private.h  Rotation.h  Tracker.h  TrackerFeatures.h  TrackerPsa.h  TrackerStat.h  TrifocalTensor.h  Uncopyable.h  Util.h
launch/: 0231-usb-cam-test.launch  camera.launch.py  camera_config.py  demo_launch.py  export.launch  multi_camera_intraprocess.launch.py  nodelet.launch  pr2_bundle.launch  pr2_bundle_no_kinect.launch  pr2_indiv.launch  pr2_train.launch  robot_webcam.launch .py  robot_webcam.launch.py  rondor_webcam.launch.py  rosa_webcam.launch.py  simple_bridge_1920.launch  simple_bridge_normal.launch  start_cameras.launch  test2nodes0231.launch  test_img_view.launch  test_params.yaml  test_yaml_config.launch.py  usb_cam-test.launch  usb_cam-test.launch.py  usb_cam-test_flip.launch  usb_cam-test_flip_orig.launch  usb_cam-test_flip_reduced.launch  usb_cam.launch  usb_cam_1920.launch  usb_cam_ntest.launch
main/: 404.html  doxybook2_config.json  index.html  requirements.txt  sitemap.xml
msg/: .gitignore  AlvarMarker.msg  Format.msg
nodes/: IndividualMarkersNoKinect.cpp  ar_pose_csv_writer.py  ar_pose_sofiehdfformat_writer.py  quat_sofiehdfformat_writer.py  sofiehdfformatwriter.py  talker.py  usb_cam_node.cpp  usb_cam_nodelet.cpp
scripts/: get-image.sh  show_image.py  start_multi_camera.sh  test_multi_camera.py
sofiehdfformat_rosdriver/: mainpage.dox  manifest.xml
src/: Camera.cpp  CaptureDevice.cpp  DirectoryIterator_unix.cpp  Draw.cpp  EC.cpp  FernImageDetector.cpp  FernPoseEstimator.cpp  FileFormatUtils.cpp  Filter.cpp  IntegralImage.cpp  Line.cpp  MarkerDetector.cpp  MultiMarkerBundle.cpp  Mutex.cpp  Mutex_unix.cpp  Mutex_win.cpp  Optimization.cpp  Platform.cpp  Plugin_unix.cpp  SampleCvTestbed.cpp  SampleMarkerCreator.cpp  SampleMarkerlessDetector.cpp  SampleMultiMarker.cpp  SampleOptimization.cpp  SamplePointcloud.cpp  Threads.cpp  Timer.cpp  TrackerFeatures.cpp  TrackerStat.cpp  UnscentedKalman.cpp  camera1_publisher.py  camera2_publisher.py  camera_driver.cpp  cli.cpp  converters.cpp  device.cpp  device_utils.cpp  medianFilter.cpp  streamcat.c  usb_cam.cpp  (+2 more)
src/ar_track_alvar/: .gitignore  CMakeLists.txt  README  package.xml
src/ar_track_alvar/bundles/: table_8_9_10.xml  tags8and9.xml  truthTableLeg.xml
src/ar_track_alvar/include/: Alvar.h  AlvarException.h  Bitset.h  Capture.h  CaptureFactory_private.h  CapturePlugin.h  ConnectedComponents.h  CvTestbed.h  DirectoryIterator_private.h  FernImageDetector.h  FernPoseEstimator.h  FileFormatUtils.h  Filter.h  GlutViewer.h  Kalman.h  Line.h  Lock.h  MarkerDetector.h  MultiMarker.h  MultiMarkerFiltered.h  MultiMarkerInitializer.h  Mutex.h  Mutex_private.h  Plugin.h  Pose.h  Ransac.h  SfM.h  Shared.h  Threads.h  Threads_private.h  Timer.h  Timer_private.h  TrackerOrientation.h  UnscentedKalman.h
src/ar_track_alvar/include/ar_track_alvar/: kinect_filtering.h
src/ar_track_alvar/launch/: pr2_indiv_no_kinect.launch
src/ar_track_alvar/msg/: AlvarMarkers.msg
src/ar_track_alvar/nodes/: FindMarkerBundles.cpp  FindMarkerBundlesNoKinect.cpp  IndividualMarkers.cpp  TrainMarkerBundle.cpp
src/ar_track_alvar/src/: Alvar.cpp  Alvar.h.cmake  Bitset.cpp  CMakeLists.txt  CaptureFactory.cpp  CaptureFactory_unix.cpp  CaptureFactory_win.cpp  ConnectedComponents.cpp  CvTestbed.cpp  DirectoryIterator.cpp  DirectoryIterator_win.cpp  GlutViewer.cpp  Kalman.cpp  Marker.cpp  MultiMarker.cpp  MultiMarkerFiltered.cpp  MultiMarkerInitializer.cpp  Plugin.cpp  Plugin_win.cpp  Pose.cpp  Ransac.cpp  Rotation.cpp  SampleCamCalib.cpp  SampleFilter.cpp  SampleIntegralImage.cpp  SampleLabeling.cpp  SampleMarkerDetector.cpp  SampleMarkerHide.cpp  SampleMarkerlessCreator.cpp  SampleMultiMarkerBundle.cpp  SampleTrack.cpp  SfM.cpp  Threads_unix.cpp  Threads_win.cpp  Timer_unix.cpp  Timer_win.cpp  TrackerOrientation.cpp  TrackerPsa.cpp  TrifocalTensor.cpp  Util.cpp  (+1 more)
src/ar_track_alvar/src/platform/capture_plugin_cmu/: CMakeLists.txt
src/ar_track_alvar/src/platform/capture_plugin_dscapture/: CMakeLists.txt  CapturePluginDSCapture.cpp
src/ar_track_alvar/src/platform/capture_plugin_file/: CMakeLists.txt  CapturePluginFile.cpp
src/ar_track_alvar/src/platform/capture_plugin_highgui/: CMakeLists.txt  CapturePluginHighgui.cpp  CapturePluginHighgui.h
src/ar_track_alvar/src/platform/capture_plugin_ptgrey/: CMakeLists.txt  CapturePluginPtgrey.cpp  CapturePluginPtgrey.h
src/ar_track_alvar/test/: points  test_kinect_filtering.cpp  test_points.cpp
src/platform/: CMakeLists.txt
src/platform/capture_plugin_cmu/: CapturePluginCmu.cpp  CapturePluginCmu.h
src/platform/capture_plugin_dscapture/: CapturePluginDSCapture.h
src/platform/capture_plugin_file/: CapturePluginFile.h
src/sofie_ros/: CMakeLists.txt  README.md  cmake_install.cmake  package.xml
src/sofie_ros/launch/: simple_bridge_1920.launch  usb_cam_normal.launch
src/sofie_ros/src/sofiehdfformat_rosdriver/: fileUtils.py
src/usb_cam/: CMakeLists.txt
src/usb_cam/src/: usb_cam.cpp
test/: gtest_main.cpp  test_pixel_formats.cpp  (+2 more)
(+147 files in other folders)
