<package>
  <name>usb_cam</name>
  <version>0.3.7</version>
  <description>A ROS Driver for V4L USB Cameras</description>

  <maintainer email="andrey.vukolov@elettra.eu">Andrey Vukolov</maintainer>
  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/usb_cam</url>
  <url type="bugtracker">https://github.com/ros-drivers/usb_cam/issues</url>
  <url type="repository">https://github.com/ros-drivers/usb_cam</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>ffmpeg</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <build_depend>camera_info_manager</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>std_msgs</run_depend> 
  <run_depend>std_srvs</run_depend> 
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>ffmpeg</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>libv4l-dev</run_depend>
</package>
