<package format="3">
  <name>v4l2_cam</name>
  <version>1.0.0</version>
  <description>A ROS 2 V4L2 Camera Driver - Fork from usb_cam with Enhanced Features</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/your-username/v4l2_cam</url>
  <url type="bugtracker">https://github.com/your-username/v4l2_cam/issues</url>
  <url type="repository">https://github.com/your-username/v4l2_cam</url>

  <!-- Required so ROS build farms properly set ROS_VERSION -->
  <build_depend>ros_environment</build_depend>
  
  <buildtool_depend>pkg-config</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>builtin_interfaces</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>v4l-utils</depend>

  <!-- Only required for MJPEG to RGB converison -->
  <depend>ffmpeg</depend>

  <!-- Only required for YAML configuration reading -->
  <depend>yaml-cpp</depend>

  <!-- Only required for the launch file -->
  <exec_depend>python3-pydantic</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
