<package>
<name>ar_track_alvar</name>
<version>0.3.0</version>
<description>
This package is a ROS wrapper for Alvar, an open source AR tag tracking library.
</description>
<maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>
<license>BSD</license>
<url type="website">http://ros.org/wiki/ar_track_alvar</url>

  <buildtool_depend>catkin</buildtool_depend>

 <build_depend>tinyxml</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>tf</build_depend>
 <build_depend>image_transport</build_depend>
 <build_depend>sensor_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>
 <build_depend>visualization_msgs</build_depend>
 <build_depend>resource_retriever</build_depend>
 <build_depend>cv_bridge</build_depend>
 <build_depend>pcl_ros</build_depend>
 <build_depend>pcl</build_depend>

 <run_depend>tinyxml</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>tf</run_depend>
 <run_depend>image_transport</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>geometry_msgs</run_depend>
 <run_depend>visualization_msgs</run_depend>
 <run_depend>resource_retriever</run_depend>
 <run_depend>cv_bridge</run_depend>
 <run_depend>pcl_ros</run_depend>
 <run_depend>pcl</run_depend>

</package>


